src-tauri/src/agents/streaming/snapshots/helmor_lib__agents__streaming__event_loop_tests__aborted_emits_update_then_aborted_with_reason.snap
---
source: src/agents/streaming/event_loop_tests.rs
expression: entries
---
- event_type: system
  emitted:
    - kind: Update
      messages: []
  side_effects: []
- event_type: assistant
  emitted:
    - kind: Update
      messages:
        - role: assistant
          part_types:
            - text
          streaming: ~
  side_effects: []
- event_type: aborted
  emitted:
    - kind: Update
      messages:
        - role: assistant
          part_types:
            - text
          streaming: ~
        - role: system
          part_types:
            - text
          streaming: ~
    - kind: Aborted
      persisted: true
      reason: user_requested
  side_effects: []
