src-tauri/src/agents/streaming/snapshots/helmor_lib__agents__streaming__event_loop_tests__codex_message_only_reconnect_error_then_end_preserves_error.snap
---
source: src/agents/streaming/event_loop_tests.rs
expression: entries
---
- event_type: turn/started
  emitted: []
  side_effects: []
- event_type: error
  emitted:
    - kind: Error
      message: Reconnecting... 1/5
      persisted: true
      internal: false
  side_effects: []
- event_type: end
  emitted: []
  side_effects: []
