src-tauri/src/agents/streaming/snapshots/helmor_lib__agents__streaming__event_loop_tests__codex_reconnecting_terminal_error_without_progress_terminates_session.snap
---
source: src/agents/streaming/event_loop_tests.rs
expression: entries
---
- event_type: turn/started
  emitted: []
  side_effects: []
- event_type: error
  emitted:
    - kind: Error
      message: Reconnecting... exhausted retries
      persisted: true
      internal: false
  side_effects: []
