src-tauri/src/agents/streaming/snapshots/helmor_lib__agents__streaming__event_loop_tests__deferred_tool_use_emits_panel_marker_without_terminating.snap
---
source: src/agents/streaming/event_loop_tests.rs
expression: entries
---
- event_type: system
  emitted:
    - kind: Update
      messages: []
  side_effects: []
- event_type: assistant
  emitted:
    - kind: Update
      messages:
        - role: assistant
          part_types:
            - text
          streaming: ~
  side_effects: []
- event_type: deferredToolUse
  emitted:
    - kind: Update
      messages:
        - role: assistant
          part_types:
            - text
          streaming: ~
    - kind: DeferredToolUse
      tool_use_id: tool-1
      tool_name: AskUserQuestion
      permission_mode: ~
  side_effects: []
