src-tauri/src/agents/streaming/snapshots/helmor_lib__agents__streaming__event_loop_tests__elicitation_request_passes_through_with_resolved_model.snap
---
source: src/agents/streaming/event_loop_tests.rs
expression: entries
---
- event_type: system
  emitted:
    - kind: Update
      messages: []
  side_effects: []
- event_type: elicitationRequest
  emitted:
    - kind: Elicitation
      server_name: design-server
      elicitation_id: elic-1
      mode: form
  side_effects: []
- event_type: end
  emitted:
    - kind: Update
      messages: []
    - kind: Done
      persisted: true
  side_effects: []
