src-tauri/src/agents/streaming/snapshots/helmor_lib__agents__streaming__event_loop_tests__error_event_terminates_session_with_internal_flag.snap
---
source: src/agents/streaming/event_loop_tests.rs
expression: entries
---
- event_type: system
  emitted:
    - kind: Update
      messages: []
  side_effects: []
- event_type: error
  emitted:
    - kind: Error
      message: Sidecar lost connection
      persisted: true
      internal: true
  side_effects: []
