src-tauri/src/agents/streaming/snapshots/helmor_lib__agents__streaming__event_loop_tests__late_event_after_terminal_is_rejected_without_emit.snap
---
source: src/agents/streaming/event_loop_tests.rs
expression: entries
---
- event_type: end
  emitted:
    - kind: Update
      messages: []
    - kind: Done
      persisted: true
  side_effects: []
- event_type: permissionRequest
  emitted: []
  side_effects: []
- event_type: permissionModeChanged
  emitted: []
  side_effects: []
- event_type: error
  emitted: []
  side_effects: []
