src-tauri/src/agents/streaming/snapshots/helmor_lib__agents__streaming__event_loop_tests__permission_mode_changed_propagates_to_later_deferred_tool.snap
---
source: src/agents/streaming/event_loop_tests.rs
expression: entries
---
- event_type: system
  emitted:
    - kind: Update
      messages: []
  side_effects: []
- event_type: permissionModeChanged
  emitted: []
  side_effects: []
- event_type: deferredToolUse
  emitted:
    - kind: Update
      messages: []
    - kind: DeferredToolUse
      tool_use_id: tool-1
      tool_name: AskUserQuestion
      permission_mode: plan
  side_effects: []
