src-tauri/src/agents/streaming/snapshots/helmor_lib__agents__streaming__event_loop_tests__permission_mode_changed_propagates_to_later_user_input_request.snap
---
source: src/agents/streaming/event_loop_tests.rs
expression: entries
---
- event_type: system
  emitted:
    - kind: Update
      messages: []
  side_effects: []
- event_type: permissionModeChanged
  emitted: []
  side_effects: []
- event_type: userInputRequest
  emitted:
    - kind: Update
      messages: []
    - kind: UserInputRequest
      user_input_id: tool-1
      source: Claude
      permission_mode: plan
      payload_kind: ask-user-question
  side_effects: []
