src-tauri/src/agents/streaming/snapshots/helmor_lib__agents__streaming__event_loop_tests__plan_captured_then_end_appends_plan_to_final_update.snap
---
source: src/agents/streaming/event_loop_tests.rs
expression: entries
---
- event_type: system
  emitted:
    - kind: Update
      messages: []
  side_effects: []
- event_type: assistant
  emitted:
    - kind: Update
      messages:
        - role: assistant
          part_types:
            - text
          streaming: ~
  side_effects: []
- event_type: planCaptured
  emitted:
    - kind: Update
      messages:
        - role: assistant
          part_types:
            - text
          streaming: ~
        - role: assistant
          part_types:
            - plan-review
          streaming: ~
    - kind: PlanCaptured
  side_effects: []
- event_type: end
  emitted:
    - kind: Update
      messages:
        - role: assistant
          part_types:
            - text
          streaming: ~
        - role: assistant
          part_types:
            - plan-review
          streaming: ~
    - kind: Done
      persisted: true
  side_effects: []
